[package]
name = "voxel_chunk"
version = "0.0.1"
edition = "2021"
license = "MIT OR LGPL-2.1-only"
description = "A voxel object module which allows you to have private Chunk objects with methods to modify their data."
keywords = ["voxel", "data", "blocks", "arrays"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
rand = "0.8.4"